force-app/main/default/objects/sked__Availability__c/sked__Availability__c.object-meta.xml
<CustomObject>
    <description>Exceptions to the standard availability template for this user</description>
    <label>Availability</label>
    <nameField>
        <displayFormat>AVAIL-{0000}</displayFormat>
        <label>Availability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>