force-app/main/default/objects/sked__Availability__c/fields/Last_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Time__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated Time</label>
    <type>DateTime</type>
</CustomField>