force-app/main/default/objects/sked__Availability__c/fields/sked__Is_Available__c.field-meta.xml
<CustomField>
    <fullName>sked__Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the resources is available for work, if not checked, they are are unavailable</inlineHelpText>
    <label>Is Available</label>
    <type>Checkbox</type>
</CustomField>