force-app/main/default/objects/sked__Availability__c/fields/sked__Notes__c.field-meta.xml
<CustomField>
    <fullName>sked__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>