force-app/main/default/objects/sked__Availability__c/fields/sked__Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Start__c</fullName>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>