force-app/main/default/objects/sked__Availability__c/fields/sked__Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Type__c</fullName>
    <description>What type of availability/unavailability</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sked_Resource_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Weekend Shift</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Break down</fullName>
            </value>
            <value>
                <fullName>Availability Template Override</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Call Out</fullName>
            </value>
            <value>
                <fullName>Floating Holiday</fullName>
            </value>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>