force-app/main/default/objects/sked__Availability__c/fields/sked_Activity_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked_Activity_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Resource</label>
    <referenceTo>sked__Activity_Resource__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>sked_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>