force-app/main/default/objects/sked__Availability__c/fields/sked_Approval_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Approval_Reason__c</fullName>
    <label>Approval Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of slot</fullName>
            </value>
            <value>
                <fullName>Outside Auto Approval Window</fullName>
            </value>
            <value>
                <fullName>Partial day balance request</fullName>
            </value>
            <value>
                <fullName>Bidding Period</fullName>
            </value>
            <value>
                <fullName>Outside Bid Submission Window</fullName>
            </value>
            <value>
                <fullName>After Bid Submission Window</fullName>
            </value>
            <value>
                <fullName>Requested Date(s) overlap with scheduled Blood Drive</fullName>
            </value>
            <value>
                <fullName>Workday Sync Failure</fullName>
            </value>
            <value>
                <fullName>Manual Workday adjustment required</fullName>
            </value>
            <value>
                <fullName>Manual Workday cancellation required</fullName>
            </value>
            <value>
                <fullName>Insufficient Sick Balance for this request. Approval Required.</fullName>
                <isActive>false</isActive>
                <label>Insufficient Sick Balance for this request. Approval Required.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>