force-app/main/default/objects/sked__Availability__c/fields/sked_Approved_Via_Automation__c.field-meta.xml
<CustomField>
    <fullName>sked_Approved_Via_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when an approval process is handled automatically by the system.</description>
    <label>Approved Via Automation</label>
    <type>Checkbox</type>
</CustomField>