force-app/main/default/objects/sked__Availability__c/fields/sked_Bidding_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Bidding_Type__c</fullName>
    <label>Bidding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bidding</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>