force-app/main/default/objects/sked__Availability__c/fields/sked_Bypass_Auto_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>sked_Bypass_Auto_Approval_Process__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bypass Auto Approval Process</label>
    <type>Checkbox</type>
</CustomField>