force-app/main/default/objects/sked__Availability__c/fields/sked_Call_Out_Created_By_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked_Call_Out_Created_By_Resource__c</fullName>
    <formula>AND(TEXT(sked__Type__c) == &#39;Call Out&#39;, CreatedById == sked__Resource__r.sked__User__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Out Created By Resource</label>
    <type>Checkbox</type>
</CustomField>