force-app/main/default/objects/sked__Availability__c/fields/sked_Call_Out_for_Activity__c.field-meta.xml
<CustomField>
    <fullName>sked_Call_Out_for_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Out for Activity</label>
    <referenceTo>sked__Activity__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>sked_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>