force-app/main/default/objects/sked__Availability__c/fields/sked_Call_Out_For_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Call_Out_For_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Out For Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Drive Call Outs</relationshipLabel>
    <relationshipName>sked_Drive_Call_Outs</relationshipName>
    <type>Lookup</type>
</CustomField>