force-app/main/default/objects/sked__Availability__c/fields/sked_Call_Out_Notes__c.field-meta.xml
<CustomField>
    <fullName>sked_Call_Out_Notes__c</fullName>
    <label>Call Out Notes</label>
    <type>TextArea</type>
</CustomField>