force-app/main/default/objects/sked__Availability__c/fields/sked_Call_Out_Reported__c.field-meta.xml
<CustomField>
    <fullName>sked_Call_Out_Reported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Out Reported</label>
    <type>Checkbox</type>
</CustomField>