force-app/main/default/objects/sked__Availability__c/fields/sked_Call_Out_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Call_Out_Type__c</fullName>
    <label>Call Out Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Out</fullName>
            </value>
            <value>
                <fullName>Late Arrival</fullName>
            </value>
            <value>
                <fullName>Early Departure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>