force-app/main/default/objects/sked__Availability__c/fields/sked_Custom_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Custom_Status__c</fullName>
    <label>Custom Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Expired</fullName>
                <label>Pending - Expired</label>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Waitlist Expired</fullName>
                <label>Waitlist - Expired</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Approved From Waitlist</fullName>
            </value>
            <value>
                <fullName>Approved From Pending</fullName>
            </value>
            <value>
                <fullName>Processing Approval</fullName>
            </value>
            <value>
                <fullName>Processing Adjustment</fullName>
            </value>
            <value>
                <fullName>Processing Cancellation</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
                <isActive>false</isActive>
                <label>Processing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>