force-app/main/default/objects/sked__Availability__c/fields/sked_Date_ISO_Format__c.field-meta.xml
<CustomField>
    <fullName>sked_Date_ISO_Format__c</fullName>
    <formula>TEXT(YEAR(sked_Start_Date__c)) &amp;&quot;-&quot;&amp;LPAD(TEXT(MONTH (sked_Start_Date__c)),2,&quot;0&quot;)&amp;&quot;-&quot;&amp;LPAD(TEXT(DAY (sked_Start_Date__c)),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date ISO Format</label>
    <type>Text</type>
</CustomField>