force-app/main/default/objects/sked__Availability__c/fields/sked_DateTime_Call_Out_Received__c.field-meta.xml
<CustomField>
    <fullName>sked_DateTime_Call_Out_Received__c</fullName>
    <label>DateTime Call Out Received</label>
    <type>DateTime</type>
</CustomField>