force-app/main/default/objects/sked__Availability__c/fields/sked_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decline Reason 1</fullName>
            </value>
            <value>
                <fullName>Decline Reason 2</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>