force-app/main/default/objects/sked__Availability__c/fields/sked_Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Disposition_Date__c</fullName>
    <description>HRP-13555</description>
    <label>Disposition Date</label>
    <type>DateTime</type>
</CustomField>