force-app/main/default/objects/sked__Availability__c/fields/sked_Dispositioned_By_User__c.field-meta.xml
<CustomField>
    <fullName>sked_Dispositioned_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HRP-13555</description>
    <label>Dispositioned By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sked_AvailabilityDispositionedUser</relationshipName>
    <type>Lookup</type>
</CustomField>