force-app/main/default/objects/sked__Availability__c/fields/sked_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Employee_Id__c</fullName>
    <formula>sked__Resource__r.sked_Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Id</label>
    <type>Text</type>
</CustomField>