force-app/main/default/objects/sked__Availability__c/fields/sked_Exception_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Exception_Code__c</fullName>
    <label>Exception Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>