force-app/main/default/objects/sked__Availability__c/fields/sked_Integrate_With_Workday__c.field-meta.xml
<CustomField>
    <fullName>sked_Integrate_With_Workday__c</fullName>
    <formula>AND(TEXT(sked__Resource__r.sked__Resource_Type__c) = &#39;Person&#39;, TEXT(sked_Workday_Sync_Status__c) != &#39;Manual&#39;, TEXT(sked_Workday_Sync_Status__c) != &#39;Not Applicable&#39;, NOT(ISNULL(sked_Time_Off_Reason_Code__c)), TEXT(sked__Type__c) != &#39;Unavailable&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integrate With Workday</label>
    <type>Checkbox</type>
</CustomField>