force-app/main/default/objects/sked__Availability__c/fields/sked_Is_Exception__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Exception__c</fullName>
    <formula>LEN(TRIM(sked_Exception_Code__c)) &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Exception</label>
    <type>Checkbox</type>
</CustomField>