force-app/main/default/objects/sked__Availability__c/fields/sked_Is_Reason_Code_Not_Null__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Reason_Code_Not_Null__c</fullName>
    <formula>NOT(ISNULL(sked_Time_Off_Reason_Code__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reason Code Not Null</label>
    <type>Checkbox</type>
</CustomField>