force-app/main/default/objects/sked__Availability__c/fields/sked_Is_Reason_Code_Null__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Reason_Code_Null__c</fullName>
    <formula>ISNULL(sked_Time_Off_Reason_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reason Code Null</label>
    <type>Checkbox</type>
</CustomField>