force-app/main/default/objects/sked__Availability__c/fields/sked_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>sked_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>