force-app/main/default/objects/sked__Availability__c/fields/sked_Other_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Other_Decline_Reason__c</fullName>
    <label>Other Decline Reason</label>
    <type>TextArea</type>
</CustomField>