force-app/main/default/objects/sked__Availability__c/fields/sked_Ranking__c.field-meta.xml
<CustomField>
    <fullName>sked_Ranking__c</fullName>
    <label>Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>