force-app/main/default/objects/sked__Availability__c/fields/sked_Related_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>sked_Related_Call_Out__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Call Out</label>
    <referenceTo>sked__Availability__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>sked_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>