force-app/main/default/objects/sked__Availability__c/fields/sked_Requested_Time_Off_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked_Requested_Time_Off_Hours__c</fullName>
    <description>HRP-13861</description>
    <label>Requested Time Off Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>