force-app/main/default/objects/sked__Availability__c/fields/sked_SBA_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_SBA_Count__c</fullName>
    <label>SBA Count</label>
    <summaryForeignKey>sked_Staffing_Budget_Availability__c.sked_Availability__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>