force-app/main/default/objects/sked__Availability__c/fields/sked_Staffing_Budget__c.field-meta.xml
<CustomField>
    <fullName>sked_Staffing_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staffing Budget</label>
    <referenceTo>sked_Staffing_Budget__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>sked_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>