force-app/main/default/objects/sked__Availability__c/fields/sked_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>