force-app/main/default/objects/sked__Availability__c/fields/sked_Time_Call_Out_Received__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Call_Out_Received__c</fullName>
    <label>Time Call Out Received</label>
    <type>Time</type>
</CustomField>