force-app/main/default/objects/sked__Availability__c/fields/sked_Time_of_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_of_Call_Out__c</fullName>
    <label>Time Call Out Submitted</label>
    <type>Time</type>
</CustomField>