force-app/main/default/objects/sked__Availability__c/fields/sked_Time_Off_Plan__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Off_Plan__c</fullName>
    <description>Time off plan for workday integration</description>
    <label>Time Off Plan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>