force-app/main/default/objects/sked__Availability__c/fields/sked_Time_Off_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Off_Reason_Code__c</fullName>
    <description>Time off reason code for workday integration</description>
    <label>Time Off Reason Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>