force-app/main/default/objects/sked__Availability__c/fields/sked_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_Unique_Key__c</fullName>
    <formula>Id &amp; &#39;:&#39; &amp; sked__Resource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>