force-app/main/default/objects/sked__Availability__c/fields/sked_Waitlist_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>sked_Waitlist_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waitlist Confirmed</label>
    <type>Checkbox</type>
</CustomField>