force-app/main/default/objects/sked__Availability__c/fields/sked_WID__c.field-meta.xml
<CustomField>
    <fullName>sked_WID__c</fullName>
    <externalId>true</externalId>
    <label>Workday Time Off Entry Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>