force-app/main/default/objects/sked__Availability__c/fields/sked_Workday_Manual_Steps__c.field-meta.xml
<CustomField>
    <fullName>sked_Workday_Manual_Steps__c</fullName>
    <inlineHelpText>The action required by the timekeeper to validate for PTO requests that are being manually tracked.</inlineHelpText>
    <label>Workday Manual Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>