force-app/main/default/objects/sked__Availability__c/fields/sked_Workday_Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>sked_Workday_Sync_Message__c</fullName>
    <description>Populated by the API integration to provide a reason as to why the PTO sync failed</description>
    <label>Workday Sync Message</label>
    <length>200</length>
    <type>Text</type>
</CustomField>