force-app/main/default/objects/sked__Availability__c/fields/sked_Workday_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Workday_Sync_Status__c</fullName>
    <label>Workday Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>