force-app/main/default/objects/sked__Availability__c/validationRules/sked__StartFinishDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartFinishDateCheck</fullName>
    <active>true</active>
    <errorConditionFormula>sked__Start__c &gt; sked__Finish__c</errorConditionFormula>
    <errorDisplayField>sked__Finish__c</errorDisplayField>
    <errorMessage>Start Date cannot be after the Finish Date</errorMessage>
</ValidationRule>