force-app/main/default/objects/sked__Availability__c/listViews/All_Availabilities.listView-meta.xml
<ListView>
    <fullName>All_Availabilities</fullName>
    <columns>NAME</columns>
    <columns>sked__Resource__c</columns>
    <columns>sked__Type__c</columns>
    <columns>sked__Start__c</columns>
    <columns>sked__Finish__c</columns>
    <columns>sked_Resource_Type__c</columns>
    <columns>sked_Custom_Status__c</columns>
    <columns>sked_Workday_Sync_Status__c</columns>
    <columns>sked_WID__c</columns>
    <columns>sked_Workday_Sync_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>sked_Dispositioned_By_User__c</columns>
    <columns>sked_Disposition_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Availabilities</label>
</ListView>